--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "axios": "^1.11.0",
+    "js-cookie": "^3.0.5",
     "notistack": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
