--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.14.1",
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@mui/icons-material": "^7.2.0",
-    "@mui/material": "^7.2.0",
+    "@mui/lab": "^7.0.0",
+    "@mui/material": "^7.3.3",
+    "@mui/x-date-pickers": "^8.12.0",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
     "notistack": "^3.0.2",
     "react": "^18.2.0",
